--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TP1"
         tools:targetApi="31">
         <activity
+            android:name=".HelloWorld"
+            android:exported="false"
+            android:label="@string/title_activity_hello_world" />
+        <activity
+            android:name=".Form"
+            android:exported="false"
+            android:label="@string/title_activity_form" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.TP1">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
