--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +17,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:targetApi="31">
+        <activity
+            android:name=".TrainResult"
+            android:exported="false"
+            android:label="@string/title_activity_train_result" />
+        <activity
+            android:name=".Train"
+            android:exported="false"
+            android:label="@string/title_activity_train" />
+        <activity
+            android:name=".Phone"
+            android:exported="false"
+            android:label="@string/title_activity_phone" />
         <activity
             android:name=".FormResult"
             android:exported="false"
