--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".Calendar"
+            android:exported="false"
+            android:label="@string/title_activity_calendar" />
+        <activity
             android:name=".TrainResult"
             android:exported="false"
             android:label="@string/title_activity_train_result" />
